--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     ],
     "require": {
         "composer/installers": "^1.2",
+        "cweagans/composer-patches": "^1.6",
         "drupal/config_installer": "^1.8",
         "drupal/config_split": "^1.4",
         "drupal/core-composer-scaffold": "^8.8",
@@ -30,6 +31,11 @@
     "prefer-stable": true,
     "config": {
         "sort-packages": true
+    },
+    "scripts": {
+        "post-drupal-scaffold-cmd": [
+            "cd docroot && patch -p1 < ../patches/htaccess.patch"
+        ]
     },
     "extra": {
         "drupal-scaffold": {
@@ -83,6 +89,9 @@
                 "  * Remove the plugin that prints this message:",
                 "      composer remove drupal/core-project-message"
             ]
+        },
+        "enable-patching": true,
+        "patches": {
         }
     }
 }
